<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ui.activity.DetailActivity">
    <item
            android:id="@+id/menu_fav"
            android:title="@string/favorite"
            app:showAsAction="always"
    />
</menu>