<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/eventFragment"
            android:icon="@drawable/ic_trophy"
            android:title="@string/prev_match" />

    <item
            android:id="@+id/teamFragment"
            android:icon="@drawable/ic_soccer_field"
            android:title="@string/team" />

    <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />

</menu>